--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/MoeCancode/community-blogs#readme",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.5",
     "mysql2": "^2.3.3",
