--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/MoeCancode/community-blogs#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
     "connect-session-sequelize": "^7.1.3",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
